update framework and java